--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -1062,16 +1062,17 @@ a.author:hover
 .comment-vote
 {
     position: absolute;
-    float: left;
-    margin-left: -27px;
-    width: 30pt;
-    height: 20pt;
+    margin-top: 1pt;
+    margin-left: -$small-font-size * 2;
+    width: $small-font-size * 3;
+    height: $small-font-size * 2;
 }
 
 .button-vote
 {
-    position: absolute;
     cursor: pointer;
+    position: absolute;
+    left: $small-font-size * 0.6;
     font-family: "Webdings";
     opacity: 0;
     transition: opacity .15s ease-in-out;
@@ -1084,19 +1085,19 @@ a.author:hover
 
 .button-vote.upvote
 {
-    top: -2px;
+    top: -2pt;
 }
 
 .button-vote.downvote
 {
-    top: 8px;
+    top: 5pt;
 }
 
 .vote-content
 {
-    position: relative;
-    top: 1pt;
-    left: 5pt;
+    float: right;
+    padding-top: 1px;
+    padding-right: $small-font-size * 1.5;
     transition: all .15s ease-in-out;
     opacity: 0.5;
 }
@@ -1121,7 +1122,7 @@ a.author:hover
     .vote-content
     {
         opacity: 1;
-        left: -1pt;
+        padding-right: $small-font-size * 2.55;
     }
 
     .vote-readonly
@@ -1134,7 +1135,7 @@ a.author:hover
         .vote-content
         {
             opacity: 0.5;
-            left: 5pt;
+            padding-right: $small-font-size * 1.5;
         }
     }
 
@@ -1159,11 +1160,6 @@ a.author:hover
     {
         margin-top: 0;
         margin-bottom: 2pt;
-    }
-
-    .comment-vote
-    {
-        margin-left: -25px;
     }
 }
 
