--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -23,7 +23,7 @@
 <!-- Register form -->
 <form class="register-form"
     id="registration"
-    action="~/services/users/register"
+    action="~/api/users/register"
     method="post"
     asp-antiforgery="true"
     data-ng-controller="registerController as register">
