New comments are read only and appear on bottom

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -121,7 +121,7 @@
 
             <!-- Story comment -->
             <div class="comment-group"
-                data-ng-repeat="comment in news.comments[@storyId] | orderBy:'-votes' | orderBy:'-date'">
+                data-ng-repeat="comment in news.comments[@storyId] | orderBy:'-votes' | orderBy:'date'">
                 <!-- Comment votes -->
                 <div class="comment-vote"
                     title="votes"
