--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -30,6 +30,15 @@ $drop-shadow-dark-color: #777777;
 $drop-shadow-light-color: #999999;
 $drop-shadow-transparent-color: black;
 
+$facebook-color: #3563A1;
+$twitter-color: #00B6F1;
+$google-color: #DD4B39;
+$microsoft-color: #7FBA00;
+$linkedin-color: #0976B4;
+$github-color: #7171A9;
+$reddit-color: #FF4500;
+$yahoo-color: #630AFF;
+
 $warning-color: #E1B412;
 $error-color: #E11912;
 $highlight-color1: #E11268;
