--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -35,8 +35,6 @@
         </span>
     </h2>
 
-    
-
     <!-- Story metadata -->
     <p class="metadata">
 
@@ -54,9 +52,9 @@
         <!-- Author -->
         <a class="author" href="#">@story.author</a>
 
+        <!-- Geographic Location -->
         @if (!string.IsNullOrEmpty(story.location))
         {
-            <!-- Geographic Location -->
             @: - from
             
             @if (story.latitude != null &&
@@ -66,7 +64,8 @@
                 <a class="location"
                     href="https://www.google.com/maps/@@@(story.latitude),@(story.longitude),@(story.zoom)z"
                     target="_blank">
-                    @story.location</a>
+                    @story.location
+                </a>
             }
             else
             {
@@ -74,8 +73,8 @@
             }
         }
 
+        <!-- Views -->
         <span class="metadata-group">
-            <!-- Views -->
             - @story.views views
         </span>
 
@@ -83,7 +82,7 @@
         <span class="tags">
         @foreach (var tag in story.tags)
         {
-            <tag>@Shared.FormatTag(tag)</tag>
+            <a class="tag" data-fade>@Shared.FormatTag(tag)</a>
         }
         </span>
     </p>
@@ -160,18 +159,19 @@
         <!-- Login providers -->
         <span data-ng-show="!news.user && news.addingComment[@storyId]">
             <span class="metadata"> | login with: </span>
-            @foreach (var loginProvider in SignInManager.GetExternalAuthenticationSchemes().ToList())
+            @foreach (var loginProvider in SignInManager.GetExternalAuthenticationSchemes())
             {
             <form action="~/api/users/login/@loginProvider.AuthenticationScheme"
                 method="get"
                 target="login"
                 class="form-inline">
                 <button type="submit"
-                    class="button-inline"
-                    title="@loginProvider.DisplayName.ToLower()"
+                    class="button-inline button-social button-social-@loginProvider.DisplayName.ToLower()"
+                    title="Login with @loginProvider.DisplayName"
                     name="authenticationScheme"
                     data-ng-show="!news.user"
-                    data-ng-click="news.login()">
+                    data-ng-click="news.login()"
+                    data-fade>
                     <icon class="icon-button"
                         data-src="images/social.svg#@loginProvider.DisplayName.ToLower()"
                         data-width="16"
