--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -787,6 +787,7 @@ a.author:hover {
   position: relative;
   top: -$border-thickness;
   color: $border-color;
+  white-space: nowrap;
 }
 
 .os-win {
